--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.2"
+    "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
+    "mongoose": "^6.9.2",
+    "validator": "^13.9.0"
   }
 }
